Switch to Yoga tags
master release is being switched to Yoga
in rdoinfo with [1], this patch switches jobs
setting Yoga as master.

Also stop running DLRN-build-tripleo-centos8 as
TripleO is not branching stable/xena so there will
be no TripleO promotion and no point in validating
DLRN builds with TripleO promoted current-tripleo.

[1] https://review.rdoproject.org/r/c/rdoinfo/+/35945

Depends-On: https://review.rdoproject.org/r/c/rdoinfo/+/35945
Change-Id: I3117062ee44b2411700b38f4cccf92126e7e3089

--- a/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
+++ b/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
@@ -94,7 +94,7 @@
         cmd: |
           set -e -x
 
-          MASTER="xena"
+          MASTER="yoga"
           RELEASE="{{ rdoinfo_release }}"
           PHASE="{{ rdoinfo_phase }}"
           PROJECT="{{ zuul.project.name }}"
