--- a/playbooks/rdoinfo/weirdo-periodic.yaml
+++ b/playbooks/rdoinfo/weirdo-periodic.yaml
@@ -20,7 +20,7 @@
         cmd: |
           set -e -x
 
-          MASTER="xena"
+          MASTER="yoga"
           RELEASE="{{ rdoinfo_release }}"
           DIST_VER="{{ centos_releasever }}"
 
