Switch to Yoga tags
master release is being switched to Yoga
in rdoinfo with [1], this patch switches jobs
setting Yoga as master.

[1] https://review.rdoproject.org/r/c/rdoinfo/+/35945

Depends-On: https://review.rdoproject.org/r/c/rdoinfo/+/35945
Change-Id: I3117062ee44b2411700b38f4cccf92126e7e3089

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -132,7 +132,7 @@
     parent: DLRN-rpmbuild
     voting: false
     vars:
-      tag: 'xena-uc'
+      tag: 'yoga-uc'
 
 - job:
     name: DLRN-rpmbuild-rpm-packaging-centos
@@ -166,7 +166,7 @@
     name: DLRN-rpmbuild-centos8-pinned
     parent: DLRN-rpmbuild-centos8
     vars:
-      tag: 'xena-uc'
+      tag: 'yoga-uc'
       centos_version: 'centos8'
 
 - job:
@@ -182,7 +182,7 @@
     name: DLRN-rpmbuild-centos9-pinned
     parent: DLRN-rpmbuild-centos9
     vars:
-      tag: 'xena-uc'
+      tag: 'yoga-uc'
 
 - job:
     name: rpmlint
