Multinode jobs for validation component
General periodic multinode job now includes validations.yml playboook.

Multinode jobs were defined for the validation component
in master, wallaby, victoria, train and ussuri branches.

With the stable branches inheriting from the master branch job.

Multinode jobs using validations for other components should
inherit from the validation component job, in their respective branch.

Depends-On: https://review.opendev.org/c/openstack/tripleo-ci/+/814330
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/814356

Change-Id: Iaf308c516427db805c4339cd398e43dd6fc96436
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>

--- a/zuul.d/component-jobs-train.yaml
+++ b/zuul.d/component-jobs-train.yaml
@@ -297,6 +297,13 @@
       release: train
       branch_override: 'stable/train'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-train
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    override-checkout: "stable/train"
+    vars:
+      release: train
+      branch_override: 'stable/train'
 
 ## standalone component jobs
 
