--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -361,6 +361,20 @@
     vars:
       component: tripleo
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-component-master
+    vars:
+      component: validation
+      enable_validation: true
+      playbooks:
+        - multinode.yml
+        - validations.yml
+      extra_tags:
+        - component-validations
+        - tripleo-validations
+      featureset_override:
+        skip_tags_list: ''
 
 ## standalone component jobs
 
