--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -285,6 +285,12 @@
       release: wallaby
       branch_override: 'stable/wallaby'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
 
 ## standalone component jobs
 
