Multinode jobs for validation component
General periodic multinode job now includes validations.yml playboook.

Multinode jobs were defined for the validation component
in master, wallaby, victoria, train and ussuri branches.

With the stable branches inheriting from the master branch job.

Multinode jobs using validations for other components should
inherit from the validation component job, in their respective branch.

Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/814407

Change-Id: Iaf308c516427db805c4339cd398e43dd6fc96436
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -361,6 +361,19 @@
     vars:
       component: tripleo
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-component-master
+    description: |
+      Job uses featureset 010 with one primary and one secondary node.
+      The 'validations.yml' playbook of tripleo-quickstart is used to initiate
+      role containing the actual tests. Set of tests run is determined on basis
+      of the 'component' variable value.
+    vars:
+      component: validation
+      enable_validation: true
+      extra_tags:
+        - component-validations
 
 ## standalone component jobs
 
