Multinode jobs for validation component
Multinode jobs were defined for the validation component
in master, wallaby, victoria, train and ussuri branches,
using one controller and one compute node.

With the stable branches inheriting from the master branch job.

Multinode jobs using validations for other components should
inherit from the validation component job, in their respective branch.

Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/814407

Change-Id: Iaf308c516427db805c4339cd398e43dd6fc96436
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -361,7 +361,16 @@
     vars:
       component: tripleo
 
-
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-component-master
+    vars:
+      component: validation
+      enable_validation: true
+      playbooks:
+        - multinode.yml
+      nodes: 1ctrl_1comp
+         
 ## standalone component jobs
 
 - job:
