--- a/zuul.d/integration-pipeline-ussuri.yaml
+++ b/zuul.d/integration-pipeline-ussuri.yaml
@@ -6,102 +6,196 @@
       jobs:
         ## ovb
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-ussuri:
+            nodeset: upstream-centos-8-psi-public
+            vars:
+              force_periodic: true
+              cloud_name: psi_public_nodepool_tripleo
+              cloud_settings:
+                psi_public_nodepool_tripleo:
+                  baremetal_flavor: ci.baremetal
+                  baremetal_image: centos8
+                  bmc_flavor: ci.s.m
+                  enable_config_drive: 'true'
+                  extra_node_flavor: ci.baremetal
+                  public_ip_net: internet
+                  undercloud_flavor: ci.nodepool
+              create_private_network: false
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
               - periodic-tripleo-centos-8-buildimage-overcloud-full-ussuri
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-ussuri
         - periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-ussuri:
+            nodeset: upstream-centos-8-psi-public
+            vars:
+              force_periodic: true
+              cloud_name: psi_public_nodepool_tripleo
+              cloud_settings:
+                psi_public_nodepool_tripleo:
+                  baremetal_flavor: ci.baremetal
+                  baremetal_image: centos8
+                  bmc_flavor: ci.s.m
+                  enable_config_drive: 'true'
+                  extra_node_flavor: ci.baremetal
+                  public_ip_net: internet
+                  undercloud_flavor: ci.nodepool
+              create_private_network: false
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
               - periodic-tripleo-centos-8-buildimage-overcloud-full-ussuri
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-ussuri
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-ussuri:
+            nodeset: upstream-centos-8-psi-public
+            vars:
+              force_periodic: true
+              cloud_name: psi_public_nodepool_tripleo
+              cloud_settings:
+                psi_public_nodepool_tripleo:
+                  baremetal_flavor: ci.baremetal
+                  baremetal_image: centos8
+                  bmc_flavor: ci.s.m
+                  enable_config_drive: 'true'
+                  extra_node_flavor: ci.baremetal
+                  public_ip_net: internet
+                  undercloud_flavor: ci.nodepool
+              create_private_network: false
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
               - periodic-tripleo-centos-8-buildimage-overcloud-full-ussuri
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-ussuri
         - periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-ussuri:
+            nodeset: upstream-centos-8-psi-public
+            vars:
+              force_periodic: true
+              cloud_name: psi_public_nodepool_tripleo
+              cloud_settings:
+                psi_public_nodepool_tripleo:
+                  baremetal_flavor: ci.baremetal
+                  baremetal_image: centos8
+                  bmc_flavor: ci.s.m
+                  enable_config_drive: 'true'
+                  extra_node_flavor: ci.baremetal
+                  public_ip_net: internet
+                  undercloud_flavor: ci.nodepool
+              create_private_network: false
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-ussuri:
+            nodeset: upstream-centos-8-psi-public
+            vars:
+              force_periodic: true
+              cloud_name: psi_public_nodepool_tripleo
+              cloud_settings:
+                psi_public_nodepool_tripleo:
+                  baremetal_flavor: ci.baremetal
+                  baremetal_image: centos8
+                  bmc_flavor: ci.s.m
+                  enable_config_drive: 'true'
+                  extra_node_flavor: ci.baremetal
+                  public_ip_net: internet
+                  undercloud_flavor: ci.nodepool
+              create_private_network: false
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
               - periodic-tripleo-centos-8-buildimage-overcloud-full-ussuri
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-ussuri
         ## multinode
         - periodic-tripleo-ci-centos-8-scenario007-multinode-oooq-container-ussuri:
+            nodeset: two-centos-8-nodes-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-containers-multinode-ussuri:
+            nodeset: two-centos-8-nodes-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-ussuri:
+           nodeset: two-centos-8-nodes-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         ## undercloud
         - periodic-tripleo-ci-centos-8-undercloud-containers-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-containers-undercloud-minion-ussuri:
+            nodeset: two-centos-8-nodes-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         ## standalone
         - periodic-tripleo-ci-centos-8-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario001-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario002-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario003-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario004-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario007-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario010-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario012-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-ussuri:
+            nodeset: two-centos-8-nodes-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-standalone-upgrade-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         - periodic-tripleo-ci-centos-8-undercloud-upgrade-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         ## containers/images
         - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-centos-8-ussuri-promote-promoted-components-to-tripleo-ci-testing
         - periodic-tripleo-centos-8-buildimage-overcloud-full-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-centos-8-ussuri-promote-promoted-components-to-tripleo-ci-testing
         - periodic-tripleo-centos-8-buildimage-ironic-python-agent-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-centos-8-ussuri-promote-promoted-components-to-tripleo-ci-testing
         - periodic-tripleo-centos-8-buildimage-overcloud-hardened-full-ussuri:
+            nodeset: single-centos-8-node-psi
             dependencies:
               - periodic-tripleo-centos-8-ussuri-promote-promoted-components-to-tripleo-ci-testing
         ## promote to tripleo-ci-testing
