[wip] Install pip
Change-Id: If5c06b9599d8d8e05855e7bb0ebac25692cf0f1d

--- a/roles/fetch-zuul-cloner-fork/tasks/main.yaml
+++ b/roles/fetch-zuul-cloner-fork/tasks/main.yaml
@@ -1,7 +1,12 @@
+- name: Ensure pip is available
+  include_role:
+    name: ensure-pip
+
 - name: Install zuul-cloner shim dependencies
   pip:
     name: PyYAML
     virtualenv: "{{ virtualenv }}"
+    virtualenv_command: "{{ ensure_pip_virtualenv_command }}"
   become: true
 
 - name: Install zuul-cloner shim
