Work around certifi issue in CentOS 7
Following the expiration of the DST Root CA X3 certificate, we need
the certifi package to remove the certificate from its list of CA
authorities [1]. However, it will have to wait until the cert is removed
from the Mozilla root store [2][3].

This patch works around the issue by using the REQUESTS_CA_BUNDLE
environment variable, and making it point to the system-provided CA
bundle.

[1] - https://github.com/certifi/python-certifi/pull/162
[2] - https://bugzilla.mozilla.org/show_bug.cgi?id=1733560
[3] - https://bugzilla.mozilla.org/show_bug.cgi?id=1733003

Change-Id: Ia0849dd29b6ed2af2e815b7ca24330832dfe62b1

--- a/playbooks/DLRN/rpmbuild.yaml
+++ b/playbooks/DLRN/rpmbuild.yaml
@@ -26,6 +26,7 @@
       changed_when: true
       shell:
         cmd: |
+          export REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
           export TAG="{{  tag | default('') }}"
           export CENTOS_VERS="{{  centos_version | default('centos7') }}"
           export REPO_SERVER="https://trunk.rdoproject.org"
