--- a/playbooks/DLRN/rpmbuild-rpm-packaging-centos.yaml
+++ b/playbooks/DLRN/rpmbuild-rpm-packaging-centos.yaml
@@ -19,6 +19,7 @@
       shell:
         cmd: |
           set +e
+          export REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
           # FIXME(jpena) some packages are moving to use singlespec, which
           # requires an up to date openstack-macros package in the builder,
           # and not just in the mock buildroot.
