--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -282,6 +282,12 @@
         to_build: false
 
 - job:
+    name: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-rbac-master
+    parent: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-master
+    vars:
+      enable_secure_rbac: true
+
+- job:
     name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-master
     parent: tripleo-ci-base-ovb-periodic-centos-8
     vars:
