Add weirdo jobs to gate xena-release updates
Change-Id: I3d04cad330365bd825a3a06ad4e0725762668358

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -506,6 +506,13 @@
         - validate-buildsys-tags-xena-testing-packstack-scenario001-centos8
         - validate-buildsys-tags-xena-testing-packstack-scenario002-centos8
         - validate-buildsys-tags-xena-testing-packstack-scenario003-centos8
+        - validate-buildsys-tags-xena-release-puppet-scenario001-centos8
+        - validate-buildsys-tags-xena-release-puppet-scenario002-centos8
+        - validate-buildsys-tags-xena-release-puppet-scenario003-centos8
+        - validate-buildsys-tags-xena-release-puppet-scenario004-centos8
+        - validate-buildsys-tags-xena-release-packstack-scenario001-centos8
+        - validate-buildsys-tags-xena-release-packstack-scenario002-centos8
+        - validate-buildsys-tags-xena-release-packstack-scenario003-centos8
 
 - project-template:
     name: periodic-centos-stream
