--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -513,6 +513,13 @@
         - validate-buildsys-tags-xena-release-packstack-scenario001-centos8
         - validate-buildsys-tags-xena-release-packstack-scenario002-centos8
         - validate-buildsys-tags-xena-release-packstack-scenario003-centos8
+        - validate-buildsys-tags-yoga-testing-puppet-scenario001-centos8
+        - validate-buildsys-tags-yoga-testing-puppet-scenario002-centos8
+        - validate-buildsys-tags-yoga-testing-puppet-scenario003-centos8
+        - validate-buildsys-tags-yoga-testing-puppet-scenario004-centos8
+        - validate-buildsys-tags-yoga-testing-packstack-scenario001-centos8
+        - validate-buildsys-tags-yoga-testing-packstack-scenario002-centos8
+        - validate-buildsys-tags-yoga-testing-packstack-scenario003-centos8
 
 - project-template:
     name: periodic-centos-stream
