--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -1168,6 +1168,59 @@
       scenario: scenario003
 
 - job:
+    name: validate-buildsys-tags-yoga-testing-centos8-base
+    parent: weirdo-validate-buildsys-tags-base
+    vars:
+      rdoinfo_release: yoga
+      rdoinfo_phase: testing
+      centos_releasever: 8s
+    nodeset: rdo-centos-8-stream
+    files:
+      - ^buildsys-tags/cloud8s-openstack-yoga-testing.yml$
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-puppet-scenario001-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario001
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-puppet-scenario002-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario002
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-puppet-scenario003-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario003
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-puppet-scenario004-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario004
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-packstack-scenario001-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario001
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-packstack-scenario002-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario002
+
+- job:
+    name: validate-buildsys-tags-yoga-testing-packstack-scenario003-centos8
+    parent: validate-buildsys-tags-yoga-testing-centos8-base
+    vars:
+      scenario: scenario003
+
+- job:
     name: weirdo-periodic-base
     parent: base
     run: playbooks/rdoinfo/weirdo-periodic.yaml
