--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -902,3 +902,69 @@
     vars:
       release: master
       component: tripleo
+
+
+## undercloud-upgrade jobs
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    parent: tripleo-ci-base-singlenode-periodic-centos-8
+    abstract: true
+    vars:
+      <<: *component_vars_standalone
+      add_repos:
+        - type: generic
+          reponame: "{{ component }}"
+          filename: "{{ component }}-component.repo"
+          priority: 1
+          baseurl: "https://{{ dlrn_server_url }}/centos8-{{ release }}/component/{{ component }}/component-ci-testing"
+          update_container: true
+          enabled: 0
+      featureset: '050'
+      release: master
+      featureset_override:
+        validate_services: false
+      extra_tags:
+        - undercloud-upgrade
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-baremetal-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: baremetal
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-clients-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: clients
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-cloudops-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: cloudops
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-common-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: common
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-network-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: network
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-security-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: security
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-tripleo-master
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-component-master
+    vars:
+      component: tripleo
