Multinode validation component jobs for compute and ooo
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I27b6049d329cf1dab637ba01225b67ce53b0de9b

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -338,6 +338,13 @@
       component: common
 
 - job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: compute
+      enable_validation: true
+
+- job:
     name: periodic-tripleo-ci-centos-8-containers-multinode-network-master
     parent: periodic-tripleo-ci-centos-8-containers-multinode-component-master
     vars:
@@ -361,6 +368,19 @@
     vars:
       component: tripleo
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: tripleo
+      enable_validation: true
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-component-master
+    vars:
+      component: validation
+      enable_validation: true
 
 ## standalone component jobs
 
