--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -292,6 +292,26 @@
       release: wallaby
       branch_override: 'stable/wallaby'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby-1ctlr-1comp
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master-1ctlr-1comp
+    abstract: true
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-wallaby-validation-1ctlr-1comp
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: tripleo
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-wallaby-validation-1ctlr-1comp
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: compute
+
 ## standalone component jobs
 
 - job:
