Multinode validation component jobs for compute and ooo
Multinode validation jobs for tripleo and compute components
were added to master and wallaby branches.

Porting jobs to older branches should be only done on per-case
basis, following effectivness evaluation and consultations.

Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I1296e63c60a6bed21b5f8f7b3838b230cf52f35e

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -371,6 +371,17 @@
         - component-validations
       nodes: 1ctrl_1comp
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: tripleo
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: compute
+
 ## standalone component jobs
 
 - job:
