Multinode validation component jobs for compute and ooo
Multinode validation jobs for tripleo and compute components
were added to master and wallaby branches.

Porting jobs to older branches should be only done on per-case
basis, following effectivness evaluation and consultations.

Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I1296e63c60a6bed21b5f8f7b3838b230cf52f35e

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -292,6 +292,20 @@
       release: wallaby
       branch_override: 'stable/wallaby'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: tripleo
+      nodes: 1ctlr_1comp
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: compute
+      nodes: 1ctlr_1comp
+
 ## standalone component jobs
 
 - job:
