--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -375,6 +375,50 @@
       extra_tags:
         - component-validations
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-validation-master-1ctlr-1comp
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    abstract: true
+    nodeset: three-centos-8-nodes
+    vars:
+      validations_inventory: "tripleo-deploy/undercloud/tripleo-ansible-inventory.yaml"
+      featureset_override:
+        overcloud_roles:
+          - name: Controller
+            CountDefault: 1
+            networks:
+              - External
+              - InternalApi
+              - Storage
+              - StorageMgmt
+              - Tenant
+            tags:
+              - primary
+              - controller
+          - name: Compute
+            CountDefault: 1
+            networks:
+              - External
+              - InternalApi
+              - Storage
+              - StorageMgmt
+              - Tenant
+            tags:
+              - compute
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master-1ctlr-1comp
+    vars:
+      component: tripleo
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master-1ctlr-1comp
+    vars:
+      component: compute
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
