Multinode validation component jobs for compute and ooo
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I1296e63c60a6bed21b5f8f7b3838b230cf52f35e

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -368,6 +368,17 @@
       component: validation
       enable_validation: true
 
+- job:
+    name: periodic-tripleo-ci-centos8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+       component: tripleo
+- job:
+    name: periodic-tripleo-ci-centos8-containers-multinode-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+       component: compute
+
 ## standalone component jobs
 
 - job:
