Multinode validation component jobs for tripleo
Multinode validation jobs for tripleo component
were added to master and wallaby branches.

Porting jobs to older branches should be only done on per-case
basis, following effectivness evaluation and consultations.

Depends-On: https://review.opendev.org/c/openstack/tripleo-ci/+/815222
Depends-On: https://review.opendev.org/c/openstack/validations-common/+/813174
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/814801

Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I1296e63c60a6bed21b5f8f7b3838b230cf52f35e

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -286,6 +286,20 @@
       branch_override: 'stable/wallaby'
 
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-wallaby
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-master
+    abstract: true
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: tripleo
+
 ## standalone component jobs
 
 - job:
