--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -362,6 +362,50 @@
       component: tripleo
 
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    abstract: true
+    nodeset: three-centos-8-nodes
+    description: |
+      Overrides 'overcloud_roles' variable of the '010' feature set to allow for
+      two nodes, 1 controller and 1 compute.
+      Sets the 'validations_inventory' variable to ensure that proper inventory
+      is used by the executed validations. The default inventory path is set in
+      the 'validations.yml' playbook as 'tripleo-deploy/tripleo-ansible-inventory.yaml'.
+    vars:
+      validations_inventory: "tripleo-deploy/undercloud/tripleo-ansible-inventory.yaml"
+      nodes: 1ctlr_1comp
+      featureset_override:
+        overcloud_roles:
+          - name: Controller
+            CountDefault: 1
+            networks:
+              - External
+              - InternalApi
+              - Storage
+              - StorageMgmt
+              - Tenant
+            tags:
+              - primary
+              - controller
+          - name: Compute
+            CountDefault: 1
+            networks:
+              - External
+              - InternalApi
+              - Storage
+              - StorageMgmt
+              - Tenant
+            tags:
+              - compute
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: tripleo
+
 ## standalone component jobs
 
 - job:
