--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -292,6 +292,31 @@
       release: wallaby
       branch_override: 'stable/wallaby'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-wallaby
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-master
+    abstract: true
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    description: |
+      Sets the 'validations_inventory' variable to ensure that proper inventory
+      is used by the executed validations. The default inventory path is set in
+      the 'validations.yml' playbook as 'tripleo-deploy/tripleo-ansible-inventory.yaml'.
+    vars:
+      validations_inventory: "tripleo-deploy/undercloud/tripleo-ansible-inventory.yaml"
+      component: tripleo
+
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-wallaby
+    vars:
+      component: compute
+
 ## standalone component jobs
 
 - job:
