[WIP] Test glance multistore functionality
Enabling tempest test to test glance multistore functionality.

Change-Id: Id9c638a9a8c53a3693f9cd0952ef066fbdc7ae83

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -2,6 +2,7 @@
     name: rdo-jobs
     check:
       jobs:
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-master-glance-multistore-test
         - tox-docs: &cfg
             nodeset: rdo-centos-8
             pre-run:
